Fix page title on small screens

--- a/app/styles/modules/layout/page.less
+++ b/app/styles/modules/layout/page.less
@@ -25,5 +25,15 @@
 @media screen and (max-width: 600px) {
   .page-title {
     margin-bottom: 1rem;
+    text-align: left;
+    right: 0;
+    margin-bottom: 1rem;
+
+    ~ a:nth-of-type(1) {
+      display: block;
+      text-align: left;
+      margin-top: -1rem;
+      margin-bottom: 1rem;
+    }
   }
 }
